--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,14 +54,14 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:3.14.2'
 
     // Location
-    // implementation 'com.google.android.gms:play-services-location:16.0.0'
+    implementation 'com.google.android.gms:play-services-location:16.0.0'
 
     // Room Library and Viewmodel
-    implementation "android.arch.persistence.room:runtime:1.1.1"
-    annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
+    implementation 'android.arch.persistence.room:runtime:1.1.1'
+    annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'
 
     // Testing
-    testImplementation "android.arch.core:core-testing:1.1.1"
+    testImplementation 'android.arch.core:core-testing:1.1.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
