--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,8 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.14.2'
 
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
     // Location
     implementation 'com.google.android.gms:play-services-location:16.0.0'
 
