--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,11 +63,12 @@ dependencies {
     annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'
 
     // Testing
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
     testImplementation 'android.arch.core:core-testing:1.1.1'
     testImplementation 'junit:junit:4.12'
+    testImplementation 'org.mockito:mockito-core:2.19.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'android.arch.lifecycle:extensions:1.1.1'
 
     // Debug
     debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'
