Migrate to AndroidX

--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,5 @@ org.gradle.jvmargs=-Xmx1536m
 
 # OpenWeatherMap Api Key
 openweathermapapikey = "6f394a59535ea91c36d735c805d9c471"
+android.useAndroidX=true
+android.enableJetifier=true
