--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,15 +59,16 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:16.0.0'
 
     // Room Library and Viewmodel
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
     implementation 'androidx.room:room-runtime:2.0.0'
     annotationProcessor 'androidx.room:room-compiler:2.0.0'
 
     // Testing
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
-    testImplementation 'androidx.arch.core:core-testing:2.0.1'
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.mockito:mockito-core:2.19.0'
+    androidTestImplementation "android.arch.core:core-testing:2.0.1"
     androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     // Debug
